--- a/blog11/views/components/notification.ejs
+++ b/blog11/views/components/notification.ejs
@@ -1,6 +1,6 @@
 <div class="ui grid">
   <div class="four wide column"></div>
-  <div class="eight wide column"></div>
+  <div class="eight wide column">
   <% if (success) { %>
     <div class="ui success message">
       <p><%= success %></p>
@@ -12,4 +12,5 @@
       <p><%= error %></p>
     </div>
   <% } %>
+  </div>
 </div> 
