--- a/blog11/views/posts.ejs
+++ b/blog11/views/posts.ejs
@@ -1,3 +1,7 @@
-<%- include header %>
+<%- include('header') %>
 这是主页
-<%- include footer %>
+<!-- <div>
+    <p>这是主页</p>
+    <h1>nicai</h1>
+</div> -->
+<%- include('footer') %>
