--- a/blog11/views/components/nav-setting.ejs
+++ b/blog11/views/components/nav-setting.ejs
@@ -1,7 +1,7 @@
 <div class="nav-setting">
   <div class="ui buttons">
     <div class="ui floating dropdown button">
-      <i class="cion bars"></i>
+      <i class="icon bars"></i>
       <div class="menu">
         <% if (user) { %>
           <a class="item" href="/posts?author=<%= user._id %>">个人主页</a>
@@ -9,7 +9,7 @@
           <a href="posts/create" class="item">发表</a>
           <a href="signout" class="item">登出</a>
         <% } else { %>
-          <a href="login" class="item">登录</a>
+          <a href="signin" class="item">登录</a>
           <a href="signup" class="item">注册</a>
         <% } %>
       </div>
