--- a/blog11/views/components/nav-setting.ejs
+++ b/blog11/views/components/nav-setting.ejs
@@ -6,8 +6,8 @@
         <% if (user) { %>
           <a class="item" href="/posts?author=<%= user._id %>">个人主页</a>
           <div class="divider"></div>
-          <a href="posts/create" class="item">发表</a>
-          <a href="signout" class="item">登出</a>
+          <a href="/posts/create" class="item">发表</a>
+          <a href="/signout" class="item">登出</a>
         <% } else { %>
           <a href="signin" class="item">登录</a>
           <a href="signup" class="item">注册</a>
