--- a/blog11/views/edit.ejs
+++ b/blog11/views/edit.ejs
@@ -11,14 +11,14 @@
     </div>
 
     <div class="eight wide column">
-      <form class="ui form segment" method="post" action="/posts"  enctype="multipart/form-data">
+      <form class="ui form segment" method="post" action="/posts/<%= post._id %>/edit"  enctype="multipart/form-data">
         <div class="field required">
           <label>标题</label>
-          <input type="text" name="title">
+          <input type="text" name="title" value="<%= post.title %>">
         </div>
         <div class="field required">
           <label>内容</label>
-          <textarea name="content" rows="15"></textarea>
+          <textarea name="content" rows="15"><%= post.content %></textarea>
         </div>
         <input type="submit" class="ui button" value="发布">
       </form>
