--- a/blog/views/components/nav-setting.ejs
+++ b/blog/views/components/nav-setting.ejs
@@ -9,8 +9,8 @@
           <a href="/posts/create" class="item">发表</a>
           <a href="/signout" class="item">登出</a>
         <% } else { %>
-          <a href="signin" class="item">登录</a>
-          <a href="signup" class="item">注册</a>
+          <a href="/signin" class="item">登录</a>
+          <a href="/signup" class="item">注册</a>
         <% } %>
       </div>
     </div>
